--- a/gradle.properties
+++ b/gradle.properties
@@ -7,8 +7,8 @@ forge_version=47.3.0
 forge_version_range=[47,)
 loader_version_range=[47,)
 
-mapping_channel=parchment
-mapping_version=2023.09.03-1.20.1
+mapping_channel=official
+mapping_version=1.20.1
 
 ## Mod
 mod_id=mia
