--- a/build.gradle
+++ b/build.gradle
@@ -12,24 +12,24 @@ base {
     archivesName = mod_id
 }
 
-// Mojang ships Java 17 to end users in 1.18+, so your mod should target Java 17.
+// Mojang 在 1.18+ 中向最终用户分发 Java 17，因此您的模组应针对 Java 17。
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
 println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}"
 minecraft {
-    // The mappings can be changed at any time and must be in the following format.
-    // Channel:   Version:
-    // official   MCVersion             Official field/method names from Mojang mapping files
-    // parchment  YYYY.MM.DD-MCVersion  Open community-sourced parameter names and javadocs layered on top of official
+    // 映射可以在任何时候更改，并且必须采用以下格式。
+    // 通道:   版本:
+    // official   MCVersion             Mojang 映射文件中的官方字段/方法名称
+    // parchment  YYYY.MM.DD-MCVersion  基于官方映射文件的开源社区提供的参数名称和 Javadoc
     //
-    // You must be aware of the Mojang license when using the 'official' or 'parchment' mappings.
-    // See more information here: https://github.com/MinecraftForge/MCPConfig/blob/master/Mojang.md
+    // 使用 'official' 或 'parchment' 映射时，您必须了解 Mojang 许可证。
+    // 有关更多信息，请参阅此处: https://github.com/MinecraftForge/MCPConfig/blob/master/Mojang.md
     //
-    // Parchment is an unofficial project maintained by ParchmentMC, separate from MinecraftForge
-    // Additional setup is needed to use their mappings: https://parchmentmc.org/docs/getting-started
+    // Parchment 是一个由 ParchmentMC 维护的非官方项目，与 MinecraftForge 分开
+    // 使用其映射需要额外的设置: https://parchmentmc.org/docs/getting-started
     //
-    // Use non-default mappings at your own risk. They may not always work.
-    // Simply re-run your setup task after changing the mappings to update your workspace.
+    // 使用非默认映射需自行承担风险。它们可能无法正常工作。
+    // 简单地重新运行 setup 任务即可在更改映射后更新工作区。
     mappings channel: mapping_channel, version: mapping_version
 
     // When true, this property will have all Eclipse/IntelliJ IDEA run configurations run the "prepareX" task for the given run configuration before launching the game.
