--- a/.github/workflows/ci-gametest.yml
+++ b/.github/workflows/ci-gametest.yml
@@ -26,5 +26,8 @@ jobs:
       - name: Setup Gradle
         uses: gradle/wrapper-validation-action@v1
 
+      - name: Make gradle wrapper executable
+        run: chmod +x ./gradlew
+
       - name: Run Game Tests
         run: ./gradlew prepareRunGameTestServer runGameTestServer --no-daemon
