--- a/gradle.properties
+++ b/gradle.properties
@@ -8,6 +8,7 @@ forge_version_range=[47,)
 loader_version_range=[47,)
 
 emi_version=1.1.18+1.20.1
+appleskin_version=mc1.20.1-2.5.1
 
 mapping_channel=parchment
 mapping_version=2023.09.03-1.20.1
