--- a/.github/workflows/ci-gametest.yml
+++ b/.github/workflows/ci-gametest.yml
@@ -9,25 +9,44 @@ on:
       - main
 
 jobs:
-  build:
+  game-test:
     runs-on: ubuntu-latest
     steps:
 
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Setup Java
+      - name: Setup java
         uses: actions/setup-java@v3
         with:
           distribution: temurin
           java-version: 17
           cache: gradle
 
-      - name: Setup Gradle
-        uses: gradle/wrapper-validation-action@v1
+      - name: Restore caches
+        uses: actions/cache/restore@v4
+        id: cache
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-${{ hashFiles('**/gradle-wrapper.properties') }}
 
       - name: Make gradle wrapper executable
         run: chmod +x ./gradlew
 
-      - name: Run Game Tests
-        run: ./gradlew prepareRunGameTestServer runGameTestServer --no-daemon
+      - name: Prepare run gametest server
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: ./gradlew  prepareRunGameTestServer --no-daemon
+
+      - name: Save caches
+        if: steps.cache.outputs.cache-hit != 'true'
+        uses: actions/cache/save@v4
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-${{ hashFiles('**/gradle-wrapper.properties') }}
+
+      - name: Run game tests
+        run: ./gradlew runGameTestServer --no-daemon
