--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -3,10 +3,10 @@ name: CI (Build)
 on:
   push:
     branches:
-      - main
+      - 1.21.1-neoforge
   pull_request:
     branches:
-      - main
+      - 1.21.1-neoforge
 
 jobs:
   build:
