--- a/.github/workflows/ci-gametest.yml
+++ b/.github/workflows/ci-gametest.yml
@@ -3,10 +3,10 @@ name: CI (Game Tests)
 on:
   push:
     branches:
-      - main
+      - 1.21.1-neoforge
   pull_request:
     branches:
-      - main
+      - 1.21.1-neoforge
 
 jobs:
   game-test:
