--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,8 @@ base.archivesName = mod_id
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
 minecraft {
+    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
+
     mappings channel: mapping_channel, version: mapping_version
     copyIdeResources = true
 
